[package]
name = "wgpu"
version = "0.2.3"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
description = "Rusty wgpu API wrapper"
homepage = "https://github.com/gfx-rs/wgpu-rs"
repository = "https://github.com/gfx-rs/wgpu-rs"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]

[features]
default = []
metal = ["wgn/gfx-backend-metal"]
dx11 = ["wgn/gfx-backend-dx11"]
dx12 = ["wgn/gfx-backend-dx12"]
vulkan = ["wgn/gfx-backend-vulkan"]
gl = ["wgn/gfx-backend-gl"]
web = ["gl", "wgn/web"]

[dependencies]
wgn = { version = "0.2.6", package = "wgpu-native", features = ["local", "window-winit"] }
arrayvec = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "Element", "HtmlCanvasElement" ]

[dev-dependencies]
cgmath = "0.17"
env_logger = "0.6"
#glsl-to-spirv = "0.1"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[profile.release]
lto = true
opt-level = 'z'

[patch.crates-io]
wgpu-native = { git = "https://github.com/hecrj/wgpu", branch = "web" }
