[package]
name = "wgpu"
version = "0.3.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
	"Lucas Kent <rubickent@gmail.com>",
	"kyren <kerriganw@gmail.com>",
	"Cormac O'Brien <cormac@c-obrien.org>",
]
edition = "2018"
description = "Rusty WebGPU API wrapper"
homepage = "https://github.com/gfx-rs/wgpu-rs"
repository = "https://github.com/gfx-rs/wgpu-rs"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]

[features]
default = []
# Make Vulkan backend available on platforms where it is by default not, e.g. macOS
vulkan = ["wgn/gfx-backend-vulkan"]

[dependencies]
wgn = { package = "wgpu-native", git = "https://github.com/gfx-rs/wgpu", rev = "5ba923c79fcd7e3e3a53c5fc7d64cf169c01050d" }
arrayvec = "0.4"
raw-window-handle = "0.3"
zerocopy = "0.2"

[dev-dependencies]
cgmath = "0.17"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"
png = "0.15"
winit = { version = "0.20.0-alpha3", git = "https://github.com/rust-windowing/winit", rev = "6f5e7e170cd7bd9be1bb302dd91ebd906d29cfe1" }
